--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <h1>Course Munk</h1>
 <iframe width="100%" height="851" frameborder="0"
   src="https://observablehq.com/embed/@course-munk2/final?cells=chart"></iframe>
 
