--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<title>Page Title</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+</style>
+</head>
 <body>
-  <h1>Course Munk</h1>
-  <iframe width="100%" height="851" frameborder="0"
+
+<h1>C🍩ursemunk</h1>
+<p>Project for Data Visualization</p>
+
+<iframe width="100%" height="531" frameborder="0"
   src="https://observablehq.com/embed/@course-munk2/final?cells=chart"></iframe>
 
 </body>
